
   o    deriv/deriv3() can now handle expressions involving pnorm and
	dnorm (with a single argument), as in S.

   o	rug() now has a "..." argument allowing its location to be specified.

   o	polyroot() now handles coefficient vectors with terminal
	zeroes (as in S).

   o	plclust() in package mva, for more S-PLUS compatibility.


DEPRECATED & DEFUNCT

    o	.Alias, reshapeLong(), reshapeWide() are defunct.

    o	arima0.diag() (package ts) is deprecated: use tsdiag() instead.

    o	piechart() is deprecated; renamed to pie().


DOCUMENTATION CHANGES

    o	`Writing R Extensions' now has an example of calling R's
	random numbers from FORTRAN via C.


UTILITIES

    o	Sweave(), Stangle() and friends in package tools. Sweave allows
	mixing latex documentation and R code in a single source file:
	the R code can be replaced by its output (text, figures) to
	allow automatic report generation. Sweave files found in
	package subdir inst/doc are automatically tested by R CMD check.

    o	Rdconv can convert to the S4 .sgml format.

    o   R::Utils.pm masks some platform dependencies in perl code by
        providing global variables like R_OSTYPE or wrapper functions
        like R_runR().

    o   If a directory `inst/doc' is present in the sources of a
        package, the HTML index of the installed package has a link to
        the respective subdirectory.

    o	R CMD check is more stringent: it now also fails on malformed
	`Depends' and `Maintainer' fields in `DESCRIPTION' files, and on
	unbalanced braces in Rd files.  It now also provides pointers to
	documentation for problems it reports.


C-LEVEL FACILITIES

    o	findInterval(xt[],n,x,...) gives the index (or interval number)
	of x in the sorted sequence xt[].  There's an
	F77_SUB(interv)(.) to be called from Fortran; this used to be
	part of predict.smooth.spline's underlying Fortran code.

    o	Substitutes for (v)snprintf will be used if the OS does not