@@ -6,7 +6,7 @@ ifdef DEBUG
  DLLFLAGS=
 else
  OPTFLAGS=-O2 -Wall -pedantic
- DLLFLAGS=-s 
+ DLLFLAGS=-s
 endif
 
 all:
@@ -34,7 +34,7 @@ SOURCES_NMATH = \
 	fmax2.c fmin2.c fprec.c fround.c ftrunc.c \
 	sign.c fsign.c \
 	imax2.c imin2.c \
-	chebyshev.c log1p.c lgammacor.c gammalims.c stirlerr.c bd0.c \
+	chebyshev.c log1p.c expm1.c lgammacor.c gammalims.c stirlerr.c bd0.c \
 	gamma.c lgamma.c gamma_cody.c beta.c lbeta.c polygamma.c \
 	bessel_i.c bessel_j.c bessel_k.c bessel_y.c \
 	choose.c \
